Css fix on the header icon. Eliminate picture stretching and distortion on it. Implement code to fix double like creation on double like icon click.

--- a/app/assets/stylesheets/login_form.scss
+++ b/app/assets/stylesheets/login_form.scss
@@ -76,7 +76,7 @@ $button-hover: #000080;
 }
 
 .login-form-section button:hover {
-  background-color: $button-hover;
+  background-color: gray;
 }
 
 .login-button:hover {
